<resources>
    <string name="app_name">ProjectAppCake</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="userName">Username</string>
    <string name="nit">Nit</string>
    <string name="empresarial">Empresarial</string>
    <string name="customer">Customer</string>
    <string name="selectAccount">Select Account</string>

    <string name="sign_up">Sign Up</string>
    <string name="terms">Acepto Términos y Condiciones</string>
</resources>