<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivityEmpresarial"
    android:background="@drawable/fondoregistro">

    <TextView
        android:id="@+id/textLoginEmpresarial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/login"
        android:textSize="40sp"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textNit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/nit"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textNit" />

    <EditText
        android:id="@+id/textNit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/textLoginEmpresarial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textLoginEmpresarial"
        android:inputType="text"
        android:textColor="@color/black"
        android:hint="@string/nit"
        android:textColorHint="@android:color/darker_gray"
        android:backgroundTint="@color/black"
        />

    <TextView
        android:id="@+id/textUserPass1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/password"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/designP" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/designP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/textNit"
        app:layout_constraintStart_toStartOf="parent"
        app:endIconMode="password_toggle"
        app:boxBackgroundColor="@color/bottomColor"
        android:background="@android:color/transparent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textUserPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:text="@string/terms"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/designP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvLogEmpresarial"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/designP"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:background="@color/purple_200"
        android:onClick="login" />

    <Button
        android:id="@+id/btnRegisterEmpresarial"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogEmpresarial"
        android:textSize="15sp"
        android:text="@string/sign_up"
        android:backgroundTint="@color/teal_200"
        />

</androidx.constraintlayout.widget.ConstraintLayout>